@@ -7,6 +7,7 @@ Change Log:
 1.1.1.6
 ----------------------------------------------------------------------
 - Improve shortcode logic to not show duplicate login forms in rare, theme-specific cases
+- Fix bug that caused missing expiration date for admin-assigned memberships
 - Fix a rare error 'float expected but string found' in billings module
 - Fix minor issue with wrong filter parameter 
 
